# docs/swagger.json
@@ -18,6 +18,30 @@
     "basePath": "/",
     "paths": {
         "/posts": {
+            "get": {
+                "description": "포스트 목록 조회",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Get Post List",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Post"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a post with the input payload",
                 "consumes": [
@@ -211,7 +235,8 @@
                 },
                 "author_id": {
                     "description": "작성자 아이디",
-                    "type": "integer"
+                    "type": "string",
+                    "example": "0"
                 },
                 "content": {
                     "description": "내용",
